--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <section class="section lanzamiento">
         <h2>🔥 Último Lanzamiento</h2>
         <div class="lanzamiento-contenido">
-          <img src="img/cover/ultimo-lanzamiento.jpg" alt="Portada del lanzamiento">
+          <img src="img/cover/ultimo-lanzamiento.webp" alt="Portada del lanzamiento">
           <div class="lanzamiento-info">
             <h3>"Buenos Humos EP" – Bryan Gunner</h3>
             <p>Disponible en todas las plataformas. Escúchalo ahora:</p>
