--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <body>
 
     <header>
-        <div class="logo">MALOSOUND RECORDS</div>
+        <div class="branding">
+            <div class="logo">MALOSOUND</div>
+            <div class="slogan">R E C O R D S</div>
+        </div>
         <nav>
             <a href="#artistas">Artistas</a>
             <a href="#musica">Música</a>
@@ -50,49 +53,69 @@
     <section class="section lanzamiento">
         <h2>🔥 Último Lanzamiento</h2>
         <div class="lanzamiento-contenido">
-          <img src="img/cover/ultimo-lanzamiento.webp" alt="Portada del lanzamiento">
-          <div class="lanzamiento-info">
-            <h3>"Buenos Humos EP" – Bryan Gunner</h3>
-            <p>Disponible en todas las plataformas. Escúchalo ahora:</p>
-            <a href="https://soundcloud.com/malosound-records/sets/buenos-humos" class="btn" target="_blank">Escuchar en SoundCloud</a>
-            <a href="https://open.spotify.com/intl-es/album/33xCPagtwA59cdmHFnCgPB" class="btn btn-alt" target="_blank">Spotify</a>
-            <a href="https://music.apple.com/us/album/buenos-humos-ep/1807236478" class="btn btn-alt" target="_blank">iTunes</a>
-          </div>
+            <img src="img/cover/ultimo-lanzamiento.webp" alt="Portada del lanzamiento">
+            <div class="lanzamiento-info">
+                <h3>"Buenos Humos EP" – Bryan Gunner</h3>
+                <p>Disponible en todas las plataformas. Escúchalo ahora:</p>
+                <a href="https://soundcloud.com/malosound-records/sets/buenos-humos" class="btn"
+                    target="_blank">Escuchar en SoundCloud</a>
+                <a href="https://open.spotify.com/intl-es/album/33xCPagtwA59cdmHFnCgPB" class="btn btn-alt"
+                    target="_blank">Spotify</a>
+                <a href="https://music.apple.com/us/album/buenos-humos-ep/1807236478" class="btn btn-alt"
+                    target="_blank">iTunes</a>
+            </div>
         </div>
     </section>
 
-      <section class="section proximamente">
+    <section class="section proximamente">
         <h2>Próximos Estrenos</h2>
         <div class="proximos-grid">
-          <div class="proximo-item">
-            <img src="cover-proximo1.jpg" alt="Portada tema 1">
-            <h3>"Sin Miedo" – Sagrado M</h3>
-            <p>Lanzamiento: 2 de junio</p>
-          </div>
-          <div class="proximo-item">
-            <img src="cover-proximo2.jpg" alt="Portada tema 2">
-            <h3>"Noche Sin Ley" – Sagrado M</h3>
-            <p>Lanzamiento: 2 de junio</p>
-          </div>
+            <div class="proximo-item">
+                <img src="cover-proximo1.jpg" alt="Portada tema 1">
+                <h3>"Sin Miedo" – Sagrado M</h3>
+                <p>Lanzamiento: 2 de junio</p>
+            </div>
+            <div class="proximo-item">
+                <img src="cover-proximo2.jpg" alt="Portada tema 2">
+                <h3>"Noche Sin Ley" – Sagrado M</h3>
+                <p>Lanzamiento: 2 de junio</p>
+            </div>
         </div>
-      </section> 
+    </section>
 
     <section class="section" id="artistas">
         <h2>Artistas</h2>
         <div class="artists-grid">
             <div class="artist">
+                <img src="img/artists/400x400/yovng-carl.webp"
+                    srcset="img/artists/200x200/yovng-carl.webp 200w, img/artists/400x400/yovng-carl.webp 400w"
+                    sizes="(max-width: 600px) 100px, 160px" alt="Yovng Carl" class="artist-img" />
                 <h3>Yovng Carl</h3>
+                <p class="rol">Trap</p>
             </div>
             <div class="artist">
+                <img src="img/artists/400x400/sagrado-m.webp"
+                    srcset="img/artists/200x200/sagrado-m.webp 200w, img/artists/400x400/sagrado-m.webp 400w"
+                    sizes="(max-width: 600px) 100px, 160px" alt="Sagrado M" class="artist-img" />
                 <h3>Sagrado M</h3>
+                <p class="rol">Rap</p>
             </div>
             <div class="artist">
+                <img src="img/artists/400x400/pulmon-negro.webp"
+                    srcset="img/artists/200x200/pulmon-negro.webp 200w, img/artists/400x400/pulmon-negro.webp 400w"
+                    sizes="(max-width: 600px) 100px, 160px" alt="Pulmón Negro" class="artist-img" />
                 <h3>Pulmón Negro</h3>
+                <p class="rol">Rap</p>
             </div>
             <div class="artist">
+                <img src="img/artists/bryan-gunner.webp" alt="Bryan Gunner" class="artist-img">
                 <h3>Bryan Gunner</h3>
+                <p class="rol">Rap</p>
             </div>
             <div class="artist ceo">
+                <img src="img/artists/400x400/redmalo.webp"
+                    srcset="img/artists/200x200/redmalo.webp 200w, img/artists/400x400/redmalo.webp 400w"
+                    sizes="(max-width: 600px) 100px, 160px" alt="REDMALO" class="artist-img" />
                 <h3>REDMALO</h3>
                 <p class="rol">CEO / Productor Ejecutivo</p>
             </div>
@@ -104,6 +127,17 @@
         <div class="music-platforms">
             <a href="https://soundcloud.com/malosound-records" target="_blank">SoundCloud</a>
             <a href="https://www.youtube.com/@MALOSRecords" target="_blank">YouTube</a>
+        </div>
+        <div class="videos-grid">
+            <div class="video-wrapper">
+                <iframe src="https://www.youtube.com/embed/oc-w-1Aqy78" title="YouTube Shorts" allowfullscreen></iframe>
+            </div>
+            <div class="video-wrapper">
+                <iframe src="https://www.youtube.com/embed/59ui3de0Dgc" title="YouTube Shorts" allowfullscreen></iframe>
+            </div>
+            <div class="video-wrapper">
+                <iframe src="https://www.youtube.com/embed/0kBvnHR4FDs" title="YouTube Shorts" allowfullscreen></iframe>
+            </div>
         </div>
     </section>
 
