--- a/index.html
+++ b/index.html
@@ -4,9 +4,54 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MALOSOUND RECORDS</title>
+    <title>MALOSOUND RECORDS | Trap, Rap & R&B Latino</title>
+    <meta name="description" content="MALOSOUND RECORDS: Trap, R&B y Rap latino desde la cochera pa’l mundo. Conoce a nuestros artistas y escucha nuestra música.">
+    <meta name="keywords" content="MALOSOUND, MALOSOUND RECORDS, música urbana, trap latino, rap mexicano, r&b latino, sello discográfico, artistas latinos, REDMALO, Bryan Gunner, Sagrado M">
+    <meta name="author" content="MALOSOUND RECORDS">
+    <link rel="canonical" href="https://malosoundrecords.com/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:title" content="MALOSOUND RECORDS | Trap, Rap & R&B Latino" />
+    <meta property="og:description" content="Desde la cochera pa’l mundo. Conoce a nuestros artistas y escucha nuestra música en MALOSOUND RECORDS." />
+    <meta property="og:image" content="https://malosoundrecords.com/img/logo.png" />
+    <meta property="og:url" content="https://malosoundrecords.com/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Favicons -->
+    <link rel="icon" href="favicon_io/favicon.ico" type="image/x-icon">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-16x16.png">
+    <link rel="apple-touch-icon" href="favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon_io/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="favicon_io/android-chrome-512x512.png">
+    <link rel="manifest" href="favicon_io/site.webmanifest">
+
+    <!-- Schema.org JSON-LD -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "@id": "https://malosoundrecords.com/#organization",
+      "name": "MALOSOUND RECORDS",
+      "url": "https://malosoundrecords.com",
+      "logo": "https://malosoundrecords.com/img/logo.png",
+      "description": "Desde la cochera pa’l mundo. Trap, R&B, Rap y sangre latina de la nueva era. Esto es MALOSOUND RECORDS.",
+      "sameAs": [
+        "https://www.instagram.com/malosrecords/",
+        "https://www.youtube.com/@MALOSRecords",
+        "https://www.facebook.com/MALOSRecords",
+        "https://www.tiktok.com/@malosrecords"
+      ],
+      "founder": {
+        "@type": "Person",
+        "name": "REDMALO"
+      }
+    }
+    </script>
+
     <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 
 <body>
@@ -151,9 +196,10 @@
         <img src="img/logo.png" alt="Logo MALOSOUND" class="footer-logo" />
         <p>Síguenos en nuestras redes sociales:</p>
         <div class="socials">
-            <a href="https://www.facebook.com/MALOSRecords" target="_blank">Facebook</a> |
-            <a href="https://www.instagram.com/malosrecords/" target="_blank">Instagram</a> |
-            <a href="https://www.youtube.com/@MALOSRecords" target="_blank">YouTube</a>
+            <a href="https://www.facebook.com/MALOSRecords" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a> |
+            <a href="https://www.instagram.com/malosrecords/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a> |
+            <a href="https://www.tiktok.com/@malosrecords" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i> |
+            <a href="https://www.youtube.com/@MALOSRecords" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
         </div>
         <p>&copy; 2025 MALOSOUND RECORDS. Todos los derechos reservados.</p>
     </footer>
