lazy youtube shorts

--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MALOSOUND RECORDS | Trap, Rap & R&B Latino</title>
-    <meta name="description" content="MALOSOUND RECORDS: Trap, R&B y Rap latino desde la cochera pa’l mundo. Conoce a nuestros artistas y escucha nuestra música.">
-    <meta name="keywords" content="MALOSOUND, MALOSOUND RECORDS, música urbana, trap latino, rap mexicano, r&b latino, sello discográfico, artistas latinos, REDMALO, Bryan Gunner, Sagrado M">
+    <meta name="description"
+        content="MALOSOUND RECORDS: Trap, R&B y Rap latino desde la cochera pa’l mundo. Conoce a nuestros artistas y escucha nuestra música.">
+    <meta name="keywords"
+        content="MALOSOUND, MALOSOUND RECORDS, música urbana, trap latino, rap mexicano, r&b latino, sello discográfico, artistas latinos, REDMALO, Bryan Gunner, Sagrado M">
     <meta name="author" content="MALOSOUND RECORDS">
     <link rel="canonical" href="https://malosoundrecords.com/" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="MALOSOUND RECORDS | Trap, Rap & R&B Latino" />
-    <meta property="og:description" content="Desde la cochera pa’l mundo. Conoce a nuestros artistas y escucha nuestra música en MALOSOUND RECORDS." />
+    <meta property="og:description"
+        content="Desde la cochera pa’l mundo. Conoce a nuestros artistas y escucha nuestra música en MALOSOUND RECORDS." />
     <meta property="og:image" content="https://malosoundrecords.com/img/logo.png" />
     <meta property="og:url" content="https://malosoundrecords.com/" />
     <meta property="og:type" content="website" />
@@ -98,7 +101,7 @@
     <section class="section lanzamiento">
         <h2>🔥 Último Lanzamiento</h2>
         <div class="lanzamiento-contenido">
-            <img src="img/cover/ultimo-lanzamiento.webp" alt="Portada del lanzamiento">
+            <img src="img/cover/ultimo-lanzamiento.webp" loading="lazy" alt="Portada del lanzamiento">
             <div class="lanzamiento-info">
                 <h3>"Buenos Humos EP" – Bryan Gunner</h3>
                 <p>Disponible en todas las plataformas. Escúchalo ahora:</p>
@@ -116,12 +119,12 @@
         <h2>Próximos Estrenos</h2>
         <div class="proximos-grid">
             <div class="proximo-item">
-                <img src="cover-proximo1.jpg" alt="Portada tema 1">
+                <img src="cover-proximo1.jpg" loading="lazy" alt="Portada tema 1">
                 <h3>"Sin Miedo" – Sagrado M</h3>
                 <p>Lanzamiento: 2 de junio</p>
             </div>
             <div class="proximo-item">
-                <img src="cover-proximo2.jpg" alt="Portada tema 2">
+                <img src="cover-proximo2.jpg" loading="lazy" alt="Portada tema 2">
                 <h3>"Noche Sin Ley" – Sagrado M</h3>
                 <p>Lanzamiento: 2 de junio</p>
             </div>
@@ -132,33 +135,33 @@
         <h2>Artistas</h2>
         <div class="artists-grid">
             <div class="artist">
-                <img src="img/artists/400x400/yovng-carl.webp"
+                <img src="img/artists/400x400/yovng-carl.webp" loading="lazy"
                     srcset="img/artists/200x200/yovng-carl.webp 200w, img/artists/400x400/yovng-carl.webp 400w"
                     sizes="(max-width: 600px) 100px, 160px" alt="Yovng Carl" class="artist-img" />
                 <h3>Yovng Carl</h3>
                 <p class="rol">Trap</p>
             </div>
             <div class="artist">
-                <img src="img/artists/400x400/sagrado-m.webp"
+                <img src="img/artists/400x400/sagrado-m.webp" loading="lazy"
                     srcset="img/artists/200x200/sagrado-m.webp 200w, img/artists/400x400/sagrado-m.webp 400w"
                     sizes="(max-width: 600px) 100px, 160px" alt="Sagrado M" class="artist-img" />
                 <h3>Sagrado M</h3>
                 <p class="rol">Rap</p>
             </div>
             <div class="artist">
-                <img src="img/artists/400x400/pulmon-negro.webp"
+                <img src="img/artists/400x400/pulmon-negro.webp" loading="lazy"
                     srcset="img/artists/200x200/pulmon-negro.webp 200w, img/artists/400x400/pulmon-negro.webp 400w"
                     sizes="(max-width: 600px) 100px, 160px" alt="Pulmón Negro" class="artist-img" />
                 <h3>Pulmón Negro</h3>
                 <p class="rol">Rap</p>
             </div>
             <div class="artist">
-                <img src="img/artists/bryan-gunner.webp" alt="Bryan Gunner" class="artist-img">
+                <img src="img/artists/bryan-gunner.webp" loading="lazy" alt="Bryan Gunner" class="artist-img">
                 <h3>Bryan Gunner</h3>
                 <p class="rol">Rap</p>
             </div>
             <div class="artist ceo">
-                <img src="img/artists/400x400/redmalo.webp"
+                <img src="img/artists/400x400/redmalo.webp" loading="lazy"
                     srcset="img/artists/200x200/redmalo.webp 200w, img/artists/400x400/redmalo.webp 400w"
                     sizes="(max-width: 600px) 100px, 160px" alt="REDMALO" class="artist-img" />
                 <h3>REDMALO</h3>
@@ -174,15 +177,9 @@
             <a href="https://www.youtube.com/@MALOSRecords" target="_blank">YouTube</a>
         </div>
         <div class="videos-grid">
-            <div class="video-wrapper">
-                <iframe src="https://www.youtube.com/embed/oc-w-1Aqy78" title="YouTube Shorts" allowfullscreen></iframe>
-            </div>
-            <div class="video-wrapper">
-                <iframe src="https://www.youtube.com/embed/59ui3de0Dgc" title="YouTube Shorts" allowfullscreen></iframe>
-            </div>
-            <div class="video-wrapper">
-                <iframe src="https://www.youtube.com/embed/0kBvnHR4FDs" title="YouTube Shorts" allowfullscreen></iframe>
-            </div>
+            <div class="youtube-placeholder" data-video-id="oc-w-1Aqy78" aria-label="Video: Yovng Carl"></div>
+            <div class="youtube-placeholder" data-video-id="59ui3de0Dgc" aria-label="Video: REDMALO"></div>
+            <div class="youtube-placeholder" data-video-id="0kBvnHR4FDs" aria-label="Video: Pulmón Negro"></div>
         </div>
     </section>
 
@@ -193,13 +190,17 @@
     </section>
 
     <footer id="contacto">
-        <img src="img/logo.png" alt="Logo MALOSOUND" class="footer-logo" />
+        <img src="img/logo.png" alt="Logo principal de MALOSOUND RECORDS" class="footer-logo" />
         <p>Síguenos en nuestras redes sociales:</p>
         <div class="socials">
-            <a href="https://www.facebook.com/MALOSRecords" target="_blank" aria-label="Facebook"><i class="fab fa-facebook"></i></a> |
-            <a href="https://www.instagram.com/malosrecords/" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a> |
-            <a href="https://www.tiktok.com/@malosrecords" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i> |
-            <a href="https://www.youtube.com/@MALOSRecords" target="_blank" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
+            <a href="https://www.facebook.com/MALOSRecords" target="_blank" aria-label="Facebook"><i
+                    class="fab fa-facebook"></i></a> |
+            <a href="https://www.instagram.com/malosrecords/" target="_blank" aria-label="Instagram"><i
+                    class="fab fa-instagram"></i></a> |
+            <a href="https://www.tiktok.com/@malosrecords" target="_blank" aria-label="TikTok"><i
+                    class="fab fa-tiktok"></i></a> |
+            <a href="https://www.youtube.com/@MALOSRecords" target="_blank" aria-label="YouTube"><i
+                    class="fab fa-youtube"></i></a>
         </div>
         <p>&copy; 2025 MALOSOUND RECORDS. Todos los derechos reservados.</p>
     </footer>
