--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
                 <a href="https://soundcloud.com/malosound-records/sets/buenos-humos" class="btn"
                     target="_blank">Escuchar en SoundCloud</a>
                 <a href="https://open.spotify.com/intl-es/album/33xCPagtwA59cdmHFnCgPB" class="btn btn-alt"
-                    target="_blank">Spotify</a>
+                    target="_blank">Spotify <i class="fab fa-spotify"></i></a>
                 <a href="https://music.apple.com/us/album/buenos-humos-ep/1807236478" class="btn btn-alt"
-                    target="_blank">iTunes</a>
+                    target="_blank">iTunes <i class="fab fa-apple"></i></a>
             </div>
         </div>
     </section>
@@ -173,8 +173,9 @@
     <section class="section" id="musica">
         <h2>Escucha Nuestra Música</h2>
         <div class="music-platforms">
-            <a href="https://soundcloud.com/malosound-records" target="_blank">SoundCloud</a>
-            <a href="https://www.youtube.com/@MALOSRecords" target="_blank">YouTube</a>
+            <a href="https://soundcloud.com/malosound-records" target="_blank">SoundCloud <i
+                    class="fab fa-soundcloud"></i></a>
+            <a href="https://www.youtube.com/@MALOSRecords" target="_blank">YouTube <i class="fab fa-youtube"></i></a>
         </div>
         <div class="videos-grid">
             <div class="youtube-placeholder" data-video-id="oc-w-1Aqy78" aria-label="Video: Yovng Carl"></div>
