fix de ARIA and Google Fonts en local

--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
     <link rel="stylesheet" href="img/icons/icomoon/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preload" href="https://fonts.gstatic.com/s/montserrat/v29/JTUHjIg1_i6t8kCHKm4532VJOt5-QNFgpCuM73w5aXo.woff2"
-        as="font" type="font/woff2" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+    <link href="fonts/google/style.css" rel="stylesheet">
 </head>
 
 <body>
@@ -184,9 +182,9 @@
                     class="icon-youtube"></i></a>
         </div>
         <div class="videos-grid">
-            <div class="youtube-placeholder" data-video-id="oc-w-1Aqy78" aria-label="Video: Yovng Carl"></div>
-            <div class="youtube-placeholder" data-video-id="59ui3de0Dgc" aria-label="Video: REDMALO"></div>
-            <div class="youtube-placeholder" data-video-id="0kBvnHR4FDs" aria-label="Video: Pulmón Negro"></div>
+            <div class="youtube-placeholder" data-video-id="oc-w-1Aqy78" data-video-title="Bryan Gunner"></div>
+            <div class="youtube-placeholder" data-video-id="59ui3de0Dgc" data-video-title="Sagrado M"></div>
+            <div class="youtube-placeholder" data-video-id="0kBvnHR4FDs" data-video-title="Yovng Carl"></div>
         </div>
     </section>
 
