logo resolucion 180 140 tipo webp

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       "@id": "https://malosoundrecords.com/#organization",
       "name": "MALOSOUND RECORDS",
       "url": "https://malosoundrecords.com",
-      "logo": "https://malosoundrecords.com/img/logo.png",
+      "logo": "https://malosoundrecords.com/img/logo180.webp",
       "description": "Desde la cochera pa’l mundo. Trap, R&B, Rap y sangre latina de la nueva era. Esto es MALOSOUND RECORDS.",
       "sameAs": [
         "https://www.instagram.com/malosrecords/",
@@ -89,7 +89,7 @@
             Tu navegador no soporta video HTML5.
         </video>
         <div class="hero-content">
-            <img src="img/logo.png" alt="Logo MALOSOUND" class="hero-logo" width="120" height="120"/>
+            <img src="img/logo180.webp" alt="Logo MALOSOUND" class="hero-logo" width="120" height="120"/>
             <h1>Desde la cochera pa’l mundo, con la raza de siempre</h1>
             <p>Trap, R&B, Rap y sangre latina de la nueva era. Esto es MALOSOUND RECORDS.</p>
         </div>
@@ -194,7 +194,7 @@
     </section>
 
     <footer id="contacto">
-        <img src="img/logo.png" alt="Logo principal de MALOSOUND RECORDS" class="footer-logo" width="80" height="80"/>
+        <img src="img/logo140.webp" alt="Logo principal de MALOSOUND RECORDS" class="footer-logo" width="80" height="80"/>
         <p>Síguenos en nuestras redes sociales:</p>
         <div class="socials">
             <a href="https://www.facebook.com/MALOSRecords" target="_blank" aria-label="Facebook"
